--- a/hw1/templates/hw1/upload.html
+++ b/hw1/templates/hw1/upload.html
@@ -16,8 +16,8 @@
 
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                     <li><a href="." class="nav-link px-2 text-white">Home</a></li>
-                    <li><a href="file_upload" class="nav-link px-2 text-secondary">File_Upload</a></li>
-                    <li><a href="url_parser" class="nav-link px-2 text-white">Webpage_Scraper</a></li>
+                    <li><a href="file_upload_counter" class="nav-link px-2 text-secondary">File_Upload</a></li>
+                    <li><a href="url_parser_counter" class="nav-link px-2 text-white">Webpage_Scraper</a></li>
                 </ul>
 
 
