--- a/hw1/templates/hw1/index.html
+++ b/hw1/templates/hw1/index.html
@@ -18,8 +18,8 @@
 
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                     <li><a href="." class="nav-link px-2 text-secondary">Home</a></li>
-                    <li><a href="file_upload_counter" class="nav-link px-2 text-white">File_Upload</a></li>
-                    <li><a href="url_parser_counter" class="nav-link px-2 text-white">Webpage_Scraper</a></li>
+                    <li><a href="file_upload_counter" class="nav-link px-2 text-white">Counter</a></li>
+                    <li><a href="file_upload_zipf" class="nav-link px-2 text-white">Zipf's Curve'</a></li>
                 </ul>
 
             </div>
