--- a/hw1/templates/hw1/upload_zipf.html
+++ b/hw1/templates/hw1/upload_zipf.html
@@ -14,9 +14,9 @@
                 </a>
 
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                    <li><a href="." class="nav-link px-2 text-secondary">Home</a></li>
-                    <li><a href="file_upload_counter" class="nav-link px-2 text-white">File_Upload</a></li>
-                    <li><a href="url_parser_counter" class="nav-link px-2 text-white">Webpage_Scraper</a></li>
+                    <li><a href="." class="nav-link px-2 text-white">Home</a></li>
+                    <li><a href="file_upload_zipf" class="nav-link px-2 text-secondary">File_Upload</a></li>
+                    <li><a href="url_parser_zipf" class="nav-link px-2 text-white">Webpage_Scraper</a></li>
                 </ul>
 
                 <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
